Fix header alignment

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,9 @@
 .header {
     background-color: #1f2937;
     color: #f9faf8;
-    /* flex-direction: column; */
+    display: flex;
+    justify-content: center;
+
 }
 
 body {
@@ -36,8 +38,8 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 12px 24px;
-    padding-left: 520px;
-    padding-right: 550px;
+    padding-left: 65px;
+    padding-right: 90px;
 }
 
 .header-bottom {
@@ -46,6 +48,10 @@ body {
     justify-content: center;
     padding: 12px 24px;
     gap: 100px;
+}
+
+.header-box {
+    width: 1000px;
 }
 
 .image {
